デザインを変更

--- a/template.html
+++ b/template.html
@@ -6,7 +6,9 @@
     <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
-    <h1 class="app-title">チャット</h1>
+    <div id="greeting">
+      <h1 class="app-title">チャット</h1>
+    </div>
     <ul>
       <!-- posts -->
     </ul>
